--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 addon_version=1.0
-main_mod_version=1.16.5-0.2.2-snapshot-240331-b
+main_mod_version=1.16.5-0.2.2-snapshot-241226-d
 
 playeranim_version = 0.4.0+1.16.5
 bendylib_version = 1.2.2
